// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Normal radiobutton renders correctly 1`] = `
<label
  className="lui-radiobutton"
>
  <input
    checked={true}
    className="lui-radiobutton__input"
    type="radio"
  />
  <div
    className="lui-radiobutton__radio-wrap"
  >
    <span
      className="lui-radiobutton__radio"
    />
    <span
      className="lui-radiobutton__radio-text"
    />
  </div>
</label>
`;

exports[`Radiobutton with modifiers renders correctly 1`] = `
<label
  className="lui-radiobutton lui-radiobutton--inverse"
>
  <input
    checked={true}
    className="lui-radiobutton__input"
    type="radio"
  />
  <div
    className="lui-radiobutton__radio-wrap"
  >
    <span
      className="lui-radiobutton__radio"
    />
    <span
      className="lui-radiobutton__radio-text"
    />
  </div>
</label>
`;

exports[`Radiobutton with states renders correctly 1`] = `
<label
  className="lui-radiobutton lui-active"
>
  <input
    checked={true}
    className="lui-radiobutton__input"
    disabled={true}
    type="radio"
  />
  <div
    className="lui-radiobutton__radio-wrap"
  >
    <span
      className="lui-radiobutton__radio"
    />
    <span
      className="lui-radiobutton__radio-text"
    />
  </div>
</label>
`;
